; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitFifoLimits.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitFifoLimits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__gxfifo = type { i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_InitFifoLimits(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.__gxfifo*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = bitcast i32* %8 to %struct.__gxfifo*
  store %struct.__gxfifo* %9, %struct.__gxfifo** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = load %struct.__gxfifo*, %struct.__gxfifo** %7, align 8
  %12 = getelementptr inbounds %struct.__gxfifo, %struct.__gxfifo* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.__gxfifo*, %struct.__gxfifo** %7, align 8
  %15 = getelementptr inbounds %struct.__gxfifo, %struct.__gxfifo* %14, i32 0, i32 0
  store i8* %13, i8** %15, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
